<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/login"/>
        <item
            android:id="@+id/nav_boletines"
            android:icon="@drawable/ic_boletin"
            android:title="@string/boletines" />
        <item
            android:id="@+id/nav_noticias"
            android:icon="@drawable/ic_noticias"
            android:title="@string/noticias" />
        <item
            android:id="@+id/nav_eventos"
            android:icon="@drawable/ic_eventos"
            android:title="@string/eventos" />

        <item android:title="@string/Artículos"
            android:id="@+id/nav_articulos"
            android:icon="@drawable/ic_articulos" />

        <group >
            <item
                android:id="@+id/nav_mapas"
                android:icon="@drawable/ic_maps"
                android:title="@string/mapas" />
            <item android:title="Población" />
        </group>

        <item android:title="@string/pron_sticos"
            android:id="@+id/nav_pronosticos"
            android:icon="@drawable/ic_pronosticos" />

    </group>

</menu>